# podplay-ops

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  QA-FINDINGS.md  README.md  cosmos-podplay-setup-training-2.txt  cosmos-podplay-setup-training-3.txt  cosmos-podplay-setup-training-4.txt  cosmos-podplay-setup-training-5.txt  cosmos-podplay-setup-training-6.txt  cosmos-podplay-setup-training-7.txt  cosmos-podplay-setup-training.txt  eslint.config.js  fly.toml  index.html  package-lock.json  package.json
apps/inheritance/engine/: BUGS.md  Cargo.toml
apps/inheritance/engine/examples/: generate-test-cases.sh  generate-testate-cases.py  simple-intestate.json  test-results.md  validate-testate.py  validate.py
apps/inheritance/engine/src/: fraction.rs  lib.rs  main.rs  pipeline.rs  step10_finalize.rs  step1_classify.rs  step2_lines.rs  step3_scenario.rs  step4_estate_base.rs  step5_legitimes.rs  step6_validation.rs  step9_vacancy.rs  wasm.rs
apps/inheritance/engine/tests/: integration.rs
apps/taxklaro/engine/: Cargo.toml
apps/taxklaro/engine/src/: errors.rs  lib.rs  pipeline.rs  rates.rs  types.rs  validation.rs  wasm.rs
apps/taxklaro/engine/test-vectors/: exhaustive.md
automations/anime-recap-engine/: pyproject.toml
automations/anime-recap-engine/src/anime_recap_engine/: __init__.py  __main__.py  config.py  stage1_ingest.py
automations/anime-recap-engine/tests/: conftest.py  test_stage1.py
loops/inheritance-rust-forward/: Cargo.toml  PROMPT.md  forward-ralph.sh
loops/inheritance-rust-forward/examples/: generate-fuzz-cases.py  testate-test-results.md
loops/inheritance-rust-forward/examples/cases/: 01-single-lc.json  02-married-3lc.json  03-2lc-1ic.json  06-testate-charity.json  07-5lc-large.json  08-parents-only.json  17-adopted-child.json  18-ic-spouse.json
loops/inheritance-rust-forward/examples/fuzz-cases/: 003-intestate-2lc-sp.json  005-intestate-4lc-sp.json  007-intestate-6lc-sp.json  008-intestate-4lc-sp.json  012-intestate-6lc.json  014-intestate-6lc.json  (+31 more)
loops/inheritance-rust-forward/frontier/: current-stage.md  stage-plan.md
loops/inheritance-rust-forward/src/: lib.rs  main.rs  step10_finalize.rs  step1_classify.rs  step2_lines.rs  step3_scenario.rs  step4_estate_base.rs  step5_legitimes.rs  step6_validation.rs  step7_distribute.rs  step8_collation.rs  step9_vacancy.rs  types.rs
loops/inheritance-rust-forward/status/: stage-0-complete.txt  stage-1-complete.txt  stage-10-complete.txt  stage-11-complete.txt  stage-3-complete.txt  stage-4-complete.txt  stage-8-complete.txt  stage-9-complete.txt
loops/inheritance-rust-forward/tests/: fuzz_invariants.rs  integration.rs
(+3712 files in other folders)
