[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anime-recap-engine"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
anime-recap-engine = "anime_recap_engine.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/anime_recap_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
