[package]
name = "inheritance-engine"
version = "0.1.0"
edition = "2021"
description = "Philippine Inheritance Distribution Engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
num-rational = "0.4"
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
num-integer = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
